ipc/ipdl/test/ipdl/error/structUnknownField.ipdl
struct S {
    Foobers i;
};

protocol structUnknownField {
child: __delete__(S s);
};
